--- a/blog-project/src/auth/css/register.css
+++ b/blog-project/src/auth/css/register.css
@@ -10,6 +10,7 @@
   border: 2px solid #797979;
   border-radius: 10px;
   background-color: #ffffff;
+  box-shadow: #000 2px 2px 5px 0px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -55,6 +56,7 @@
 
 input[type='text'],
 input[type='password'] {
+  font-family: 'Abel', sans-serif;
   width: calc(100% - 30px);
   padding: 10px;
   border: 1px solid #797979;
@@ -87,9 +89,20 @@ input[type='password'] {
   background-color:transparent;
   color: black;
   font-size: 16px;
+  text-decoration: underline;
   cursor: pointer;
 
 }
+.Toastify__toast-container {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0; 
+  }
+  
+  .Toastify__toast {
+    margin-top: -200px; /* Add margin to create space between each toast message */
+  }
 .login {
   text-align: center;
 }
