--- a/blog-project/src/index.css
+++ b/blog-project/src/index.css
@@ -1,11 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Abel:wght@400;500;600;700&display=swap');
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: rgb(243, 243, 243);
+  color: rgba(220, 190, 190, 0.87);
+  background-color: rgb(207, 207, 207);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -32,7 +33,11 @@ a {
 a:hover {
   color: #535bf2;
 }
-
+.abel-regular {
+  font-family: "Abel", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
 body {
   margin: 0;
   display: flex;
@@ -64,5 +69,11 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+.Toastify__toast-body {
+  font-family: 'Abel', sans-serif; /* Change font family */
+  font-size: 16px; /* Change font size */
+  color: #000000; /* Change text color */
+  padding: 10px 15px; /* Adjust padding */
 }
 
