--- a/blog-project/src/index.css
+++ b/blog-project/src/index.css
@@ -5,8 +5,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(220, 190, 190, 0.87);
-  background-color: rgb(207, 207, 207);
+  color: rgba(140, 189, 107, 0.85);
+  background-color: rgb(140, 189, 107);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -30,6 +30,7 @@ a {
   color: #282c79;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
@@ -58,6 +59,7 @@ button {
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
+  color: white;
   font-family: inherit;
   background-color: #1a1a1a;
   cursor: pointer;
