--- a/blog-project/src/Home/css/BlogForm.css
+++ b/blog-project/src/Home/css/BlogForm.css
@@ -1,5 +1,6 @@
 .blog-form{
     display: flex;
+    flex-direction: column;
     width: 60%;
     height: 80%;
     max-width: 1400px;
@@ -18,6 +19,7 @@
 .blog-form form {
     display: flex;
     flex-direction: column;
+    height: 95%;
   }
 .blog-form label {
     font-size: 30px;
@@ -39,12 +41,9 @@
 }
 
 .blog-form textarea {
-    resize: vertical; /* Allow vertical resizing of textarea */
-    height: calc(100% - 100px); /* Set the height to be 100% minus 100px */
-}
+    flex: 1;
+    resize: vertical;
 
-.blog-form textarea {
-    resize: vertical; /* Allow vertical resizing of textarea */
 }
 .submit {
     display: flex;
@@ -68,15 +67,41 @@
     color: #000000; /* Change text color on hover */
     cursor: pointer; /* Change cursor to pointer on hover */
 }
-.back {
+.back2 {
     display: flex;
-    align-items: center; /* Align button vertically */
-    justify-content: center; /* Align button horizontally */
-    position: fixed; /* Position fixed so it stays in the viewport */
-    top: 0px; /* Distance from the top of the viewport */
-    left: 0px; /* Distance from the left of the viewport */
-    height: 40px;
-    width: 40px;
-    /* Add other styles as needed */
-    z-index: 9999; /* Ensure the button is on top of other elements */
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    position: fixed; /* Change position to fixed */
+    height: 30px;
+    width: 60px;
+    background-color: #ffffff;
+    color: #000;
+    top: 665px; /* Change top position to 20px */
+    left: 50px; /* Change left position to 20px */
+    transform: translateX(-50%);
+    border: 2px solid #797979;
+    box-shadow: #ffffff 2px 2px 5px 0px;
+    border-radius: 10px;
+    transition: background-color 0.3s, color 0.3s; 
+    text-decoration: none;
 }
+.back2:hover {
+    border: 2px solid #797979;
+    background-color: #d8d8d8; /* Change background color on hover */
+    color: #000000; /* Change text color on hover */
+    cursor: pointer; /* Change cursor to pointer on hover */
+}
+
+
+
+
+
+
+
+  /* display: flex;
+    position: fixed;
+    top: 430px;
+    left: 20px; 
+    height: 25px;
+    width: 40px; */
