final commit hopefully

--- a/blog-project/src/Home/css/BlogForm.css
+++ b/blog-project/src/Home/css/BlogForm.css
@@ -94,4 +94,18 @@
     color: #000000; /* Change text color on hover */
     cursor: pointer; /* Change cursor to pointer on hover */
 }
-
+.create_button {
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    height: 40px;
+    width: 115px;
+    background-color: #ffffff;
+    color: #000;
+    top: calc(50% + 43%); /* Adjust this percentage as needed */
+    left: 50%;
+    transform: translateX(-50%);
+    border: 2px solid #797979;
+    border-radius: 10px;
+    transition: background-color 0.3s, color 0.3s; /* Adding transition for smooth effect */
+}
